--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "isbot": "^5.1.27",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-optimized-image": "^0.4.1",
     "react-router": "^7.5.3",
     "react-use-websocket": "^4.13.0",
