--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/cors": "^2.8.18",
     "@types/jsonwebtoken": "^9.0.9",
     "axios": "^1.9.0",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -26,6 +27,7 @@
     "googleapis": "^149.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
+    "nodemailer": "^7.0.3",
     "ws": "^8.18.2"
   },
   "devDependencies": {
