--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon -L --watch 'src/**/*.ts' --exec ts-node src/index.ts",
+    "dev": "nodemon -L --watch 'src/**/*.ts' --exec ts-node --files src src/index.ts",
     "lint": "eslint 'src/**/*.ts'"
   },
   "keywords": [],
@@ -18,6 +18,7 @@
     "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.18",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/whatwg-url": "^13.0.0",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
@@ -28,6 +29,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.1",
     "nodemailer": "^7.0.3",
+    "whatwg-url": "^14.2.0",
     "ws": "^8.18.2"
   },
   "devDependencies": {
