--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^5.79.0",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "immer": "^10.1.1",
     "isbot": "^5.1.27",
     "react": "^19.1.0",
