--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
     ports:
       - "80:80"
       - "443:443"
+    networks:
+      - webnet
   server:
     image: genorred/reenbit-chat:server
     build:
@@ -25,6 +27,8 @@ services:
       - .env
     ports:
       - "5000"
+    networks:
+      - webnet
   certbot:
     image: certbot/certbot:latest
     volumes:
@@ -39,3 +43,8 @@ services:
       - client
     networks:
       - webnet
+
+
+networks:
+  webnet:
+    driver: bridge
