--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -3,7 +3,7 @@
 # -----------------------------------------
 server {
     listen 80;
-    server_name ${DOMAIN_NAME};  # замените на ваш домен, можно проксировать через env при сборке
+    server_name reenbit-chat.pp.ua;  # замените на ваш домен, можно проксировать через env при сборке
 
     # Отдаём challenge-файлы для Let's Encrypt
     location /.well-known/acme-challenge/ {
@@ -21,11 +21,11 @@ server {
 # -----------------------------------------
 server {
     listen 443 ssl http2;
-    server_name ${DOMAIN_NAME};
+    server_name reenbit-chat.pp.ua;
 
     # Пути к сертификатам, полученным certbot
-    ssl_certificate     /etc/letsencrypt/live/${DOMAIN_NAME}/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/${DOMAIN_NAME}/privkey.pem;
+    ssl_certificate     /etc/letsencrypt/live/reenbit-chat.pp.ua/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/reenbit-chat.pp.ua/privkey.pem;
     ssl_protocols       TLSv1.2 TLSv1.3;
     ssl_ciphers         HIGH:!aNULL:!MD5;
 
